--- a/spring-boot-hello-world/Dockerfile
+++ b/spring-boot-hello-world/Dockerfile
@@ -1,5 +1,5 @@
 FROM default-route-openshift-image-registry.apps.ocd1.shinhan.local/openshift/ubi8-openjdk-11-runtime:1.10
-USER root
+USER jboss
 COPY ./spring-boot-hello-1.0.jar .
 # CMD chmod 777 spring-boot-hello-1.0.jar
 # USER jboss
