--- a/spring-boot-hello-world/pom.xml
+++ b/spring-boot-hello-world/pom.xml
@@ -18,6 +18,17 @@
     </properties>
 
     <dependencies>
+    	<dependency> 
+    		<groupId>dev.snowdrop</groupId> 
+    		<artifactId>snowdrop-dependencies</artifactId> 
+    		<version>2.5.12.Final-redhat-00001</version> 
+    		<type>pom</type>
+			<scope>import</scope>
+		</dependency> 
+		<dependency>
+ 			<groupId>io.dekorate</groupId>
+ 			<artifactId>openshift-spring-starter</artifactId> 
+ 		</dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
